--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 transform: translateY(-10px);
             }
         }
-                .instagram-logo {
+                .socialmedia-logo {
             position: fixed; /* يجعل العنصر ثابتًا عند التمرير */
             top: 60px; /* المسافة من الأعلى */
             right: 10px; /* المسافة من اليمين */
@@ -79,14 +79,14 @@
             transition: transform 0.3s ease; /* تأثير عند التحريك */
         }
 
-        .instagram-logo img {
-            width: 100%; /* تكييف الصورة */
-            height: 100%;
-            border-radius: 50%; /* جعل الصورة دائرية إذا كانت مربعة */
+        .socialmedia-logo img {
+            width: 150%; /* تكييف الصورة */
+            height: 150%;
+            border-radius: 20%; /* جعل الصورة دائرية إذا كانت مربعة */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* إضافة ظل خفيف */
         }
 
-        .instagram-logo:hover {
+        .socialmedia-logo:hover {
             transform: scale(1.1); /* تكبير الشعار عند التمرير عليه */
         }
 
@@ -168,10 +168,14 @@
     </div>
     <header>
         <div class="logo" style="display: inline-block;"><img src="images/logo.png" alt="Logo"></div>
-        <a href="https://www.instagram.com/cardify7/" target="_blank" class="instagram-logo">
+        <!--instagram-->
+        <a href="https://www.instagram.com/cardify7/" target="_blank" class="socialmedia-logo">
             <img src="images/instagram.png" alt="Instagram" />
         </a>
-        
+        <!--tiktok-->
+        <a href="https://www.tiktok.com/@cardify.7" target="_blank" class="socialmedia-logo" style=" top: 130px; ">
+            <img src="images/tiktok.png" alt="tiktok" />
+        </a>
     </header>
     <!--best seller start-->
 
