--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <img src="images/poster/offers.png" alt="offers">
             </a>
         </div>
-        <!--نهاية المنتجات-->>
+        <!--نهاية المنتجات-->
     </div>
     <footer>
         <p>Online Store © 2025. All Rights Reserved.</p>
