--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             cursor: pointer;
             width: 20vh;
             height: 20vh;
-            border: 3px solid #ddd;
+            border: 3px solid #e74545;
             border-radius: 10px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
@@ -136,8 +136,8 @@
             left: 50%;
             transform: translate(-50%, -50%) scale(0.8);
             z-index: 1000;
-            background: #fff;
-            padding: 20px;
+            background: transparent;
+            padding: 00px;
             border-radius: 15px;
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
             transition: transform 0.4s ease, opacity 0.4s ease;
@@ -151,8 +151,8 @@
         }
 
         .popup img {
-            max-width: 100%;
-            max-height: 80vh;
+            max-width: 100vh;
+            max-height: 100vh;
             border-radius: 10px;
         }
 
