--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
             transition: transform 0.4s ease, opacity 0.4s ease;
             opacity: 0;
-            width:80%; /* العرض النسبي */
-            max-width: 100%; /* العرض الأقصى */
-            padding: 10px; /* مساحة داخلية تناسب الهواتف */
+            width:95%; /* العرض النسبي */
+            max-width: 85%; /* العرض الأقصى */
+            padding: 15px; /* مساحة داخلية تناسب الهواتف */
         }
 
         .popup.active {
@@ -153,8 +153,8 @@
         }
 
         .popup img {
-            max-width: 90%; /* لتحديد العرض الأقصى بالنسبة لحجم الشاشة */
-            max-height: 80%; /* لتحديد الارتفاع الأقصى */
+            max-width: 100%; /* لتحديد العرض الأقصى بالنسبة لحجم الشاشة */
+            max-height: auto; /* لتحديد الارتفاع الأقصى */
             border-radius: 10px;
             object-fit: contain; /* لضبط حجم الصورة بدون تشويه */
         }
@@ -163,8 +163,8 @@
         /* زر الإغلاق */
         .close-btn {
             position: absolute;
-            top: 15px;
-            right: 15px;
+            top: 25px;
+            right: 25px;
             font-size: 20px;
             cursor: pointer;
             background: #ff4b2b;
